<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24dp_black"
        android:title="@string/icon_map_view"/>

    <item
        android:id="@+id/list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24dp_black"
        android:title="@string/icon_list_view"/>
    <item
        android:id="@+id/workmates"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24dp_black"
        android:title="@string/icon_workmates"
        />
</menu>