<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    tools:context=".ui.fragments.workmates.WorkmatesFragment"
    android:id="@+id/fragment_workmates_root_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_workmates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>