<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.restaurants.ListViewFragment"
    android:id="@+id/fragment_list_view_root_layout">

  <!-- RecyclerView -->
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

  <!-- Background text -->
  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/no_restaurant_nearby"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/no_restaurants_nearby"
      android:textSize="20sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>